--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/JobsOfRecruiter.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/JobsOfRecruiter.cshtml
@@ -20,7 +20,7 @@
         <br>
 
         <div class="media">
-            <a href="#" class="pull-left"><img alt="avatar" class="media-object" src="http://images.vietnamworks.com/pictureofcompany/49/10197315.jpg" style="width: 100px; height: 64px;"></a>
+            <a href="#" class="pull-left"><img alt="avatar" class="media-object" src="@Model.recruiter.LogoURL" style="width: 100px; height: 64px;"></a>
 
             <div class="media-body col-md-9" style="padding-right:0px">
                 <h3 class="media-heading text-blue" style="font-weight:700">@Model.recruiter.Company</h3>
